k8s/k8s/ekel-backend/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekel-backend
  labels:
    app: ekel-backend
spec:
  type: ClusterIP
  selector:
    app: ekel-backend
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
      name: http
